# test-task

./: .gitignore  Dockerfile  Makefile  README.org  lines.txt  meson.build  polys.txt
src/: Point2D.cpp  Point2D.hpp  Polygon.cpp  Polygon.hpp  Segment.cpp  Segment.hpp  constants.hpp  main.cpp  processFiles.cpp  processFiles.hpp
